feat(bootstrap_rs): determine `flake` and `OUT` directories

--- a/helpers/bootstrap/Cargo.toml
+++ b/helpers/bootstrap/Cargo.toml
@@ -19,6 +19,7 @@ lto = "fat"
 [dependencies]
 chrono = "0.4.42"
 colored = "3.0.0"
+tempdir = "0.3.7"
 tracing = "0.1.41"
 # pin to 0.3.19 until #3369 is resolved
 tracing-subscriber = "=0.3.19"
