--- a/taplo.toml
+++ b/taplo.toml
@@ -1,13 +1,15 @@
 [formatting]
-  align_entries = true
+  # General
+  reorder_keys = true
 
+  # Arrays
   array_auto_collapse = false
   compact_arrays      = false
+  reorder_arrays      = true
 
-  indent_entries      = true
-  indent_tables       = true
-  inline_table_expand = true
-
-  reorder_arrays        = true
+  # Tables
+  align_entries         = true
+  indent_entries        = true
+  indent_tables         = true
+  inline_table_expand   = true
   reorder_inline_tables = true
-  reorder_keys          = true
