--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,5 @@
 [workspace]
+    members  = [ "crates/lib/error", "crates/lib/log", "helpers/bootstrap" ]
     resolver = "3"
 
     [workspace.package]
@@ -7,6 +8,12 @@
         edition     = "2024"
         license     = "MIT"
         version     = "0.1.0"
+    [workspace.dependencies]
+        color-eyre = "0.6.5"
+        colored    = "3.0.0"
+        niac_error = { path = "crates/lib/error" }
+        niac_log   = { path = "crates/lib/log" }
+        tracing    = "0.1.41"
 
 [profile.release]
     incremental     = true
